--- a/scss/_functions.scss
+++ b/scss/_functions.scss
@@ -1,6 +1,6 @@
-@import "functions/math";
-@import "functions/assert";
-@import "functions/rem-calc";
-@import "functions/str-util";
-@import "functions/map-util";
-@import "functions/color-util";
+@use "functions/math";
+@use "functions/assert";
+@use "functions/rem-calc";
+@use "functions/str-util";
+@use "functions/map-util";
+@use "functions/color-util";
