--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -1,22 +1,22 @@
-@import "utilities/background";
-@import "utilities/border";
-@import "utilities/clearfix";
-@import "utilities/display";
-@import "utilities/embed";
-@import "utilities/flex";
-@import "utilities/float";
-@import "utilities/interaction";
-@import "utilities/link";
-@import "utilities/opacity";
-@import "utilities/orientation";
-@import "utilities/overflow";
-@import "utilities/position";
-@import "utilities/screen-reader";
-@import "utilities/shadow";
-@import "utilities/sizing";
-@import "utilities/spacing";
-@import "utilities/stack";
-@import "utilities/typography";
-@import "utilities/valign";
-@import "utilities/visibility";
-@import "utilities/vr";
+@use "utilities/background";
+@use "utilities/border";
+@use "utilities/clearfix";
+@use "utilities/display";
+@use "utilities/embed";
+@use "utilities/flex";
+@use "utilities/float";
+@use "utilities/interaction";
+@use "utilities/link";
+@use "utilities/opacity";
+@use "utilities/orientation";
+@use "utilities/overflow";
+@use "utilities/position";
+@use "utilities/screen-reader";
+@use "utilities/shadow";
+@use "utilities/sizing";
+@use "utilities/spacing";
+@use "utilities/stack";
+@use "utilities/typography";
+@use "utilities/valign";
+@use "utilities/visibility";
+@use "utilities/vr";
