--- a/scss/component/_grid.scss
+++ b/scss/component/_grid.scss
@@ -1,22 +1,27 @@
+@use "../mixins/breakpoints";
+@use "../mixins/grid";
+@use "../settings";
+@use "../settings-options";
+
 // Row
 // Rows contain columns.
-@if $enable-grid-classes {
+@if settings-options.$enable-grid-classes {
     .row {
-        @include make-row();
+        @include grid.make-row();
 
         > * {
-            @include make-col-ready();
+            @include grid.make-col-ready();
         }
     }
 }
 
 // Responsive gutters
-@if $enable-grid-classes and $enable-grid-responsive-gutters {
-    @each $breakpoint in $responsive-gutter-breakpoints {
-        $bprule: breakpoint-designator($breakpoint);
+@if settings-options.$enable-grid-classes and settings-options.$enable-grid-responsive-gutters {
+    @each $breakpoint in settings.$responsive-gutter-breakpoints {
+        $bprule: breakpoints.breakpoint-designator($breakpoint);
 
-        @include media-breakpoint-up($breakpoint, $grid-breakpoints) {
-            @each $key, $value in $gutters {
+        @include breakpoints.media-breakpoint-up($breakpoint, settings.$grid-breakpoints) {
+            @each $key, $value in settings.$gutters {
                 .g#{$bprule}-#{$key},
                 .gx#{$bprule}-#{$key} {
                     margin-right: $value * -.5;
@@ -43,6 +48,6 @@
 
 // Columns
 // Common styles for grid columns
-@if $enable-grid-classes {
-    @include make-grid-columns();
+@if settings-options.$enable-grid-classes {
+    @include grid.make-grid-columns();
 }
