--- a/scss/functions/_map-util.scss
+++ b/scss/functions/_map-util.scss
@@ -1,3 +1,5 @@
+@use "sass:list";
+@use "sass:map";
 // Map deep get
 // @author Kitty Giraudel
 // From: https://css-tricks.com/snippets/sass/deep-getset-maps/
@@ -8,7 +10,7 @@
 // Example: $color: map-deep-get($context-themes, "primary", "control-bg");
 @function map-deep-get($map, $keys...) {
     @each $key in $keys {
-        $map: map-get($map, $key);
+        $map: map.get($map, $key);
     }
     @return $map;
 }
@@ -26,37 +28,37 @@
     $values: ();
 
     @each $key, $val in $map {
-        $keys: append($keys, $key);
-        $values: append($values, $val);
+        $keys: list.append($keys, $key);
+        $values: list.append($values, $val);
     }
 
-    $list: zip($keys, $values);
+    $list: list.zip($keys, $values);
 
     // Sort zipped list and create sorted map
     $sortedMap: ();
-    @while length($list) > 0 {
+    @while list.length($list) > 0 {
 
         // Find smallest pair
-        $smallestPair: nth($list, 1);
+        $smallestPair: list.nth($list, 1);
         @each $pair in $list {
-            $value: nth($pair, 2);
-            $smallestValue: nth($smallestPair, 2);
+            $value: list.nth($pair, 2);
+            $smallestValue: list.nth($smallestPair, 2);
             @if $value < $smallestValue {
                 $smallestPair: $pair;
             }
         }
 
         // Add smallest pair to sorted map
-        $key: nth($smallestPair, 1);
-        $value: nth($smallestPair, 2);
-        $sortedMap: map-merge($sortedMap, ($key: $value));
+        $key: list.nth($smallestPair, 1);
+        $value: list.nth($smallestPair, 2);
+        $sortedMap: map.merge($sortedMap, ($key: $value));
 
         // Remove from list smallest pair
         $newList: ();
-        $smallestPairIndex: index($list, $smallestPair);
-        @for $i from 1 through length($list) {
+        $smallestPairIndex: list.index($list, $smallestPair);
+        @for $i from 1 through list.length($list) {
             @if $i != $smallestPairIndex {
-                $newList: append($newList, nth($list, $i), "space");
+                $newList: list.append($newList, list.nth($list, $i), "space");
             }
         }
         $list: $newList;
@@ -73,7 +75,7 @@
     $mergedMap: ();
 
     @each $map in $maps {
-        $mergedMap: map-merge($mergedMap, $map);
+        $mergedMap: map.merge($mergedMap, $map);
     }
 
     @return $mergedMap;
