--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -1,8 +1,15 @@
+@use "sass:map";
+@use "sass:math";
+@use "../functions/math" as functions-math;
+@use "../settings";
+@use "../settings-options";
+@use "breakpoints";
+
 /// Grid system
 // Generate semantic grid columns with these mixins.
 
 // Rows
-@mixin make-row($gutter: $grid-gutter-width) {
+@mixin make-row($gutter: settings.$grid-gutter-width) {
     display: flex;
     flex-wrap: wrap;
     margin-right: $gutter * -.5;
@@ -11,7 +18,7 @@
 
 
 // Columns
-@mixin make-col-ready($gutter: $grid-gutter-width) {
+@mixin make-col-ready($gutter: settings.$grid-gutter-width) {
     flex: 0 0 auto;
     width: 100%; // Prevent too narrow - width is reset later
     max-width: 100%; // Prevent too wide
@@ -19,9 +26,9 @@
     padding-left: $gutter * .5;
 }
 
-@mixin make-col($size: false, $columns: $grid-columns) {
+@mixin make-col($size: false, $columns: settings.$grid-columns) {
     @if ($size) {
-        width: percentage(divide($size, $columns));
+        width: math.percentage(functions-math.divide($size, $columns));
     } @else {
         flex: 1 1 0;
     }
@@ -32,9 +39,9 @@
     width: auto;
 }
 
-@mixin make-col-offset($size, $columns: $grid-columns) {
-    $num: divide($size, $columns);
-    margin-left: if($num == 0, 0, percentage($num));
+@mixin make-col-offset($size, $columns: settings.$grid-columns) {
+    $num: functions-math.divide($size, $columns);
+    margin-left: if($num == 0, 0, math.percentage($num));
 }
 
 
@@ -46,22 +53,22 @@
 @mixin row-cols($count) {
     > * {
         flex: 0 0 auto;
-        width: divide(100%, $count);
+        width: functions-math.divide(100%, $count);
     }
 }
 
 // Grid generation
 // Generate the correct number of grid classes given any value of `$grid-columns`
-@mixin make-grid-columns($columns: $grid-columns, $breakpoints: $grid-breakpoints, $gutter: $grid-gutter-width) {
+@mixin make-grid-columns($columns: settings.$grid-columns, $breakpoints: settings.$grid-breakpoints, $gutter: settings.$grid-gutter-width) {
     // Use a placeholder selector to extend upon
     %col {
         @include make-col-ready();
     }
 
-    @each $breakpoint in map-keys($breakpoints) {
-        $bprule: breakpoint-designator($breakpoint);
+    @each $breakpoint in map.keys($breakpoints) {
+        $bprule: breakpoints.breakpoint-designator($breakpoint);
 
-        @include media-breakpoint-up($breakpoint, $breakpoints) {
+        @include breakpoints.media-breakpoint-up($breakpoint, $breakpoints) {
             // Provide basic `.col-{bp}` classes for equal-width flexbox columns
             .col#{$bprule} {
                 flex: 1 0 0%;
@@ -70,17 +77,17 @@
     }
 
     // Responsive Row Columns
-    @each $breakpoint in $row-columns-breakpoints {
-        $bprule: breakpoint-designator($breakpoint);
+    @each $breakpoint in settings.$row-columns-breakpoints {
+        $bprule: breakpoints.breakpoint-designator($breakpoint);
 
-        @include media-breakpoint-up($breakpoint, $breakpoints) {
-            @if $enable-grid-row-cols {
+        @include breakpoints.media-breakpoint-up($breakpoint, $breakpoints) {
+            @if settings-options.$enable-grid-row-cols {
                 .row-cols#{$bprule}-auto > * {
                     @include make-col-auto();
                 }
 
-                @if $grid-row-columns > 0 {
-                    @for $i from 1 through $grid-row-columns {
+                @if settings.$grid-row-columns > 0 {
+                    @for $i from 1 through settings.$grid-row-columns {
                         .row-cols#{$bprule}-#{$i} {
                             @include row-cols($i);
                         }
@@ -92,10 +99,10 @@
 
 
     // Standard columns
-    @each $breakpoint in map-keys($breakpoints) {
-        $bprule: breakpoint-designator($breakpoint);
+    @each $breakpoint in map.keys($breakpoints) {
+        $bprule: breakpoints.breakpoint-designator($breakpoint);
 
-        @include media-breakpoint-up($breakpoint, $breakpoints) {
+        @include breakpoints.media-breakpoint-up($breakpoint, $breakpoints) {
             .col#{$bprule}-auto {
                 @include make-col-auto();
             }
