--- a/scss/utilities/_flex.scss
+++ b/scss/utilities/_flex.scss
@@ -1,19 +1,23 @@
+@use "../mixins/breakpoints";
+@use "../settings";
+@use "../settings-options";
+
 // stylelint-disable declaration-no-important
 
 // Flexbox utilities
 // Custom styles for additional flexbox alignment
-@if $enable-utility-flex {
-    @each $breakpoint in $utility-flex-breakpoints {
-        $bprule: breakpoint-designator($breakpoint);
+@if settings-options.$enable-utility-flex {
+    @each $breakpoint in settings.$utility-flex-breakpoints {
+        $bprule: breakpoints.breakpoint-designator($breakpoint);
 
-        @include media-breakpoint-up($breakpoint) {
+        @include breakpoints.media-breakpoint-up($breakpoint) {
             // Order
-            @if $enable-utility-flex-order {
+            @if settings-options.$enable-utility-flex-order {
                 .order#{$bprule}-first { order: -1; }
                 .order#{$bprule}-last { order: 1; }
                 .order#{$bprule}-unordered { order: 0; }
 
-                @for $col from 0 through $utility-order-max {
+                @for $col from 0 through settings.$utility-order-max {
                     .order#{$bprule}-#{$col} {
                         order: $col;
                     }
@@ -21,7 +25,7 @@
             }
 
             // Rows and Columns
-            @if $enable-utility-flex-direction {
+            @if settings-options.$enable-utility-flex-direction {
                 .flex#{$bprule}-row { flex-direction: row !important; }
                 .flex#{$bprule}-column { flex-direction: column !important; }
                 .flex#{$bprule}-row-reverse { flex-direction: row-reverse !important; }
@@ -29,14 +33,14 @@
             }
 
             // Wrap
-            @if $enable-utility-flex-wrap {
+            @if settings-options.$enable-utility-flex-wrap {
                 .flex#{$bprule}-wrap { flex-wrap: wrap !important; }
                 .flex#{$bprule}-nowrap { flex-wrap: nowrap !important; }
                 .flex#{$bprule}-wrap-reverse { flex-wrap: wrap-reverse !important; }
             }
 
             // Justify content of child items
-            @if $enable-utility-flex-justify {
+            @if settings-options.$enable-utility-flex-justify {
                 .flex#{$bprule}-start { justify-content: flex-start !important; }
                 .flex#{$bprule}-center { justify-content: center !important; }
                 .flex#{$bprule}-end { justify-content: flex-end !important; }
@@ -46,7 +50,7 @@
             }
 
             // Alignment of child items
-            @if $enable-utility-flex-items {
+            @if settings-options.$enable-utility-flex-items {
                 .flex#{$bprule}-items-start { align-items: flex-start !important; }
                 .flex#{$bprule}-items-center { align-items: center !important; }
                 .flex#{$bprule}-items-end { align-items: flex-end !important; }
@@ -55,7 +59,7 @@
             }
 
             // Align content
-            @if $enable-utility-flex-content {
+            @if settings-options.$enable-utility-flex-content {
                 .flex#{$bprule}-content-start { align-content: flex-start !important; }
                 .flex#{$bprule}-content-end { align-content: flex-end !important; }
                 .flex#{$bprule}-content-center { align-content: center !important; }
@@ -65,7 +69,7 @@
             }
 
             // Alignment per item
-            @if $enable-utility-flex-self {
+            @if settings-options.$enable-utility-flex-self {
                 .flex#{$bprule}-self-start { align-self: flex-start !important; }
                 .flex#{$bprule}-self-center { align-self: center !important; }
                 .flex#{$bprule}-self-end { align-self: flex-end !important; }
@@ -74,7 +78,7 @@
             }
 
             // Sizing
-            @if $enable-utility-flex-sizing {
+            @if settings-options.$enable-utility-flex-sizing {
                 .flex#{$bprule}-fill { flex: 1 1 auto !important; }
                 .flex#{$bprule}-grow { flex: 1 0 auto !important; }
                 .flex#{$bprule}-grow-0 { flex-grow: 0 !important; }
