--- a/scss/utilities/_sizing.scss
+++ b/scss/utilities/_sizing.scss
@@ -1,10 +1,13 @@
+@use "../settings";
+@use "../settings-options";
+
 // stylelint-disable declaration-no-important
 
-@if $enable-utility-sizing {
+@if settings-options.$enable-utility-sizing {
     // Width and height
     @each $prop, $abbrev in (width: w, height: h) {
-        @if ($abbrev == w and $enable-utility-sizing-width) or ($abbrev == h and $enable-utility-sizing-height) {
-            $sizes-map: if($abbrev == w, $sizes-width, $sizes-height);
+        @if ($abbrev == w and settings-options.$enable-utility-sizing-width) or ($abbrev == h and settings-options.$enable-utility-sizing-height) {
+            $sizes-map: if($abbrev == w, settings.$sizes-width, settings.$sizes-height);
             @each $size, $length in $sizes-map {
                 .#{$abbrev}-#{$size} { #{$prop}: $length !important; }
             }
@@ -12,15 +15,15 @@
     }
 
     // Max width/height
-    @if $enable-utility-sizing-width {
+    @if settings-options.$enable-utility-sizing-width {
         .mw-100 { max-width: 100% !important; }
     }
-    @if $enable-utility-sizing-height {
+    @if settings-options.$enable-utility-sizing-height {
         .mh-100 { max-height: 100% !important; }
     }
 
     // Viewport
-    @if $enable-utility-sizing-viewport {
+    @if settings-options.$enable-utility-sizing-viewport {
         .min-vw-100 { min-width: 100vw !important; }
         .min-vh-100 { min-height: 100vh !important; }
 
