--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,36 +1,36 @@
 // Toggles
 // Used in conjunction with global variables to enable certain theme features.
-@import "mixins/box-shadow";
-@import "mixins/font-size";
-@import "mixins/gradients";
-@import "mixins/transition";
+@use "mixins/box-shadow";
+@use "mixins/font-size";
+@use "mixins/gradients";
+@use "mixins/transition";
 
 // Utilities
-@import "mixins/border";
-@import "mixins/breakpoints";
-@import "mixins/hover";
-@import "mixins/images";
-@import "mixins/screen-reader";
-@import "mixins/reset-text";
-@import "mixins/text-emphasis";
-@import "mixins/text-truncate";
-@import "mixins/visibility";
+@use "mixins/border";
+@use "mixins/breakpoints";
+@use "mixins/hover";
+@use "mixins/images";
+@use "mixins/screen-reader";
+@use "mixins/reset-text";
+@use "mixins/text-emphasis";
+@use "mixins/text-truncate";
+@use "mixins/visibility";
 
 // Components
-@import "mixins/alert";
-@import "mixins/backdrop";
-@import "mixins/buttons";
-@import "mixins/caret";
-@import "mixins/divider";
-@import "mixins/forms";
-@import "mixins/lists";
-@import "mixins/pagination";
-@import "mixins/switch";
-@import "mixins/tables";
-@import "mixins/modal";
+@use "mixins/alert";
+@use "mixins/backdrop";
+@use "mixins/buttons";
+@use "mixins/caret";
+@use "mixins/divider";
+@use "mixins/forms";
+@use "mixins/lists";
+@use "mixins/pagination";
+@use "mixins/switch";
+@use "mixins/tables";
+@use "mixins/modal";
 
 // Layout
-@import "mixins/clearfix";
-@import "mixins/containers";
-@import "mixins/grid";
-@import "mixins/float";
+@use "mixins/clearfix";
+@use "mixins/containers";
+@use "mixins/grid";
+@use "mixins/float";
