--- a/scss/component/_close.scss
+++ b/scss/component/_close.scss
@@ -1,21 +1,26 @@
-@if $enable-utility-close {
+@use "../mixins/font-size";
+@use "../mixins/hover";
+@use "../settings";
+@use "../settings-options";
+
+@if settings-options.$enable-utility-close {
     .close {
-        @include font-size($close-font-size);
-        font-weight: $close-font-weight;
+        @include font-size.font-size(settings.$close-font-size);
+        font-weight: settings.$close-font-weight;
         line-height: 1;
         color: inherit;
         text-decoration: none;
-        opacity: $close-opacity;
+        opacity: settings.$close-opacity;
 
         // Override anchor styling
-        @include hover-focus() {
+        @include hover.hover-focus() {
             color: inherit;
             text-decoration: none;
         }
 
         &:not(:disabled):not(.disabled) {
-            @include hover-focus() {
-                opacity: $close-hover-opacity;
+            @include hover.hover-focus() {
+                opacity: settings.$close-hover-opacity;
             }
         }
     }
