--- a/scss/component/_container.scss
+++ b/scss/component/_container.scss
@@ -1,27 +1,33 @@
+@use "sass:map";
+@use "../mixins/breakpoints";
+@use "../mixins/containers";
+@use "../settings";
+@use "../settings-options";
+
 // Container widths
 // Set the container width, and override it for fixed navbars in media queries.
 
-@if $enable-container {
+@if settings-options.$enable-container {
     // Single container class with breakpoint max-widths
     .container,
     // Fluid container - 100% wide on all breakpoints
     .container-fluid {
-        @include make-container();
+        @include containers.make-container();
     }
 }
 
 // Responsive containers
 // Containers that are 100% wide until a breakpoint
-@if $enable-container {
-    @each $breakpoint in $responsive-container-breakpoints {
-        $rc-max-width: map-get($container-max-widths, $breakpoint);
+@if settings-options.$enable-container {
+    @each $breakpoint in settings.$responsive-container-breakpoints {
+        $rc-max-width: map.get(settings.$container-max-widths, $breakpoint);
 
         @if $rc-max-width != null {
             .container-#{$breakpoint} {
                 @extend .container-fluid;
             }
 
-            @include media-breakpoint-up($breakpoint) {
+            @include breakpoints.media-breakpoint-up($breakpoint) {
                 %responsive-container-#{$breakpoint} {
                     max-width: $rc-max-width;
                 }
@@ -31,15 +37,15 @@
                     @extend %responsive-container-#{$breakpoint};
                 }
 
-                @if $enable-container-responsive {
+                @if settings-options.$enable-container-responsive {
                     // Extend each breakpoint which should be smaller or
                     // equal to the current breakpoint
                     $extend-breakpoint: true;
 
-                    @each $name, $width in $grid-breakpoints {
+                    @each $name, $width in settings.$grid-breakpoints {
                         //@if (rem($rc-max-width) > rem($width) or $breakpoint == $name) {
                         @if ($extend-breakpoint) {
-                            $bprule: breakpoint-designator($name);
+                            $bprule: breakpoints.breakpoint-designator($name);
                             @if ($bprule != "") {
                                 .container#{$bprule} {
                                     @extend %responsive-container-#{$breakpoint};
