--- a/scss/component/_drag.scss
+++ b/scss/component/_drag.scss
@@ -1,15 +1,20 @@
-@if $enable-utility-drag {
+@use "../mixins/font-size";
+@use "../mixins/hover";
+@use "../settings";
+@use "../settings-options";
+
+@if settings-options.$enable-utility-drag {
     .drag {
-        @include font-size($drag-font-size);
-        font-weight: $drag-font-weight;
+        @include font-size.font-size(settings.$drag-font-size);
+        font-weight: settings.$drag-font-weight;
         line-height: 1;
         color: inherit;
         text-decoration: none;
         touch-action: none;
-        opacity: $drag-opacity;
+        opacity: settings.$drag-opacity;
 
         // Override anchor styling
-        @include hover-focus() {
+        @include hover.hover-focus() {
             color: inherit;
             text-decoration: none;
         }
@@ -17,8 +22,8 @@
         &:not(:disabled):not(.disabled) {
             cursor: move;
 
-            @include hover-focus() {
-                opacity: $drag-hover-opacity;
+            @include hover.hover-focus() {
+                opacity: settings.$drag-hover-opacity;
             }
         }
     }
