--- a/scss/core/_code.scss
+++ b/scss/core/_code.scss
@@ -1,13 +1,19 @@
-@if $enable-code {
+@use "../mixins/border";
+@use "../mixins/box-shadow";
+@use "../mixins/font-size";
+@use "../settings";
+@use "../settings-options";
+
+@if settings-options.$enable-code {
     // Inline code
-    @if $enable-code-code {
+    @if settings-options.$enable-code-code {
         code {
-            padding: $code-padding-y $code-padding-x;
-            @include font-size($code-font-size);
-            color: $code-color;
+            padding: settings.$code-padding-y settings.$code-padding-x;
+            @include font-size.font-size(settings.$code-font-size);
+            color: settings.$code-color;
             word-wrap: break-word;
-            background-color: $code-bg;
-            @include border-radius($code-border-radius);
+            background-color: settings.$code-bg;
+            @include border.border-radius(settings.$code-border-radius);
 
             // Inherit link color when inside anchors to avoid mis-matched underline
             a > & {
@@ -17,39 +23,39 @@
     }
 
     // User input typically entered via keyboard
-    @if $enable-code-kbd {
+    @if settings-options.$enable-code-kbd {
         kbd {
-            padding: $kbd-padding-y $kbd-padding-x;
-            @include font-size($kbd-font-size);
-            color: $kbd-color;
-            background-color: $kbd-bg;
-            @include border-radius($kbd-border-radius);
-            @include box-shadow($kbd-box-shadow);
+            padding: settings.$kbd-padding-y settings.$kbd-padding-x;
+            @include font-size.font-size(settings.$kbd-font-size);
+            color: settings.$kbd-color;
+            background-color: settings.$kbd-bg;
+            @include border.border-radius(settings.$kbd-border-radius);
+            @include box-shadow.box-shadow(settings.$kbd-box-shadow);
 
             kbd {
                 padding: 0;
-                @include font-size(1em);
-                font-weight: $kbd-nested-font-weight;
-                background-color: $kbd-nested-bg;
-                @include box-shadow(none);
+                @include font-size.font-size(1em);
+                font-weight: settings.$kbd-nested-font-weight;
+                background-color: settings.$kbd-nested-bg;
+                @include box-shadow.box-shadow(none);
             }
         }
     }
 
     // Blocks of code
-    @if $enable-code-pre {
+    @if settings-options.$enable-code-pre {
         pre {
             display: block;
-            @include font-size($code-font-size);
-            color: $pre-color;
+            @include font-size.font-size(settings.$code-font-size);
+            color: settings.$pre-color;
 
             // Account for some code outputs that place code tags in pre tags
             code {
                 padding: 0;
-                @include font-size(inherit);
+                @include font-size.font-size(inherit);
                 color: inherit;
                 background-color: transparent;
-                @include border-radius(0);
+                @include border.border-radius(0);
             }
         }
     }
