--- a/scss/forms/_form-color.scss
+++ b/scss/forms/_form-color.scss
@@ -1,21 +1,29 @@
+@use "../mixins/border";
+@use "../mixins/box-shadow";
+@use "../mixins/font-size";
+@use "../mixins/forms";
+@use "../mixins/transition";
+@use "../settings";
+@use "../settings-options";
+
 // Color input
 
-@if $enable-form and $enable-form-color {
+@if settings-options.$enable-form and settings-options.$enable-form-color {
     .form-color {
         display: block;
         width: auto;
-        min-width: calc-input-height-inner($input-padding-y, $input-line-height);
-        height: calc-input-height-inner($input-padding-y, $input-line-height);
-        @include font-size($input-font-size);
-        line-height: $input-line-height;
-        color: $input-color;
-        background-color: $input-bg;
+        min-width: forms.calc-input-height-inner(settings.$input-padding-y, settings.$input-line-height);
+        height: forms.calc-input-height-inner(settings.$input-padding-y, settings.$input-line-height);
+        @include font-size.font-size(settings.$input-font-size);
+        line-height: settings.$input-line-height;
+        color: settings.$input-color;
+        background-color: settings.$input-bg;
         background-image: none;
-        border: $input-border-width solid $input-border-color;
+        border: settings.$input-border-width solid settings.$input-border-color;
 
-        @include border-radius($input-border-radius);
-        @include box-shadow($input-box-shadow);
-        @include transition($input-transition);
-        @include form-control-focus();
+        @include border.border-radius(settings.$input-border-radius);
+        @include box-shadow.box-shadow(settings.$input-box-shadow);
+        @include transition.transition(settings.$input-transition);
+        @include forms.form-control-focus();
     }
 }
