--- a/scss/forms/_form-layout.scss
+++ b/scss/forms/_form-layout.scss
@@ -1,27 +1,31 @@
+@use "../mixins/breakpoints";
+@use "../settings";
+@use "../settings-options";
+
 // Form group
 //
 // Designed to help with the organization and spacing of vertical forms. For
 // horizontal forms, use the predefined grid classes.
-@if $enable-form and $enable-form-group {
+@if settings-options.$enable-form and settings-options.$enable-form-group {
     .form-group {
-        margin-bottom: $form-group-margin-bottom;
+        margin-bottom: settings.$form-group-margin-bottom;
     }
 }
 
 // Form grid
 //
 // Special replacement for our grid system's `.row` for tighter form layouts.
-@if $enable-form and $enable-form-row {
+@if settings-options.$enable-form and settings-options.$enable-form-row {
     .form-row {
         display: flex;
         flex-wrap: wrap;
-        margin-right: $form-row-gutter-width * -.5;
-        margin-left: $form-row-gutter-width * -.5;
+        margin-right: settings.$form-row-gutter-width * -.5;
+        margin-left: settings.$form-row-gutter-width * -.5;
 
         > .col,
         > [class*="col-"] {
-            padding-right: $form-row-gutter-width * .5;
-            padding-left: $form-row-gutter-width * .5;
+            padding-right: settings.$form-row-gutter-width * .5;
+            padding-left: settings.$form-row-gutter-width * .5;
         }
     }
 }
@@ -34,7 +38,7 @@
 //
 // Requires wrapping inputs and labels with `.form-group` for proper display of
 // default HTML form controls and our custom form controls (e.g., input groups).
-@if $enable-form and $enable-form-inline {
+@if settings-options.$enable-form and settings-options.$enable-form-inline {
     .form-inline {
         display: flex;
         flex-flow: row wrap;
@@ -49,7 +53,7 @@
         }
 
         // Kick in the inline
-        @include media-breakpoint-up(#{$form-inline-breakpoint}) {
+        @include breakpoints.media-breakpoint-up(#{settings.$form-inline-breakpoint}) {
             label:not(.form-check-label) {
                 display: flex;
                 align-items: center;
@@ -59,7 +63,7 @@
 
 
             // Inline-block all the things for "inline"
-            @if $enable-form-group {
+            @if settings-options.$enable-form-group {
                 .form-group {
                     display: flex;
                     flex: 0 0 auto;
@@ -76,24 +80,24 @@
                 width: auto; // Prevent labels from stacking above inputs in `.form-group`
                 vertical-align: middle;
             }
-            @if $enable-form-control {
+            @if settings-options.$enable-form-control {
                 .form-control {
                     @extend %form-no-group;
                 }
             }
-            @if $enable-form-range {
+            @if settings-options.$enable-form-range {
                 .form-range {
                     @extend %form-no-group;
                 }
             }
 
-            @if $enable-input-group {
+            @if settings-options.$enable-input-group {
                 .input-group {
                     width: auto;
                 }
             }
 
-            @if $enable-form-label {
+            @if settings-options.$enable-form-label {
                 .form-label {
                     margin-bottom: 0;
                     vertical-align: middle;
@@ -102,7 +106,7 @@
 
             // Remove default margin on radios/checkboxes that were used for stacking, and
             // then undo the floating of radios and checkboxes to match.
-            @if $enable-form-check {
+            @if settings-options.$enable-form-check {
                 .form-check {
                     display: flex;
                     align-items: center;
@@ -110,7 +114,7 @@
                     width: auto;
 
                     > input {
-                        margin-right: $form-inline-check-margin-x;
+                        margin-right: settings.$form-inline-check-margin-x;
                     }
                 }
             }
