--- a/scss/mixins/_box-shadow.scss
+++ b/scss/mixins/_box-shadow.scss
@@ -1,20 +1,24 @@
+@use "sass:list";
+@use "../settings";
+@use "../settings-options";
+
 @mixin box-shadow($shadow...) {
-    @if $enable-shadows {
+    @if settings-options.$enable-shadows {
         $result: ();
 
-        @if (length($shadow) == 1 and nth($shadow, 1) != null) {
+        @if (list.length($shadow) == 1 and list.nth($shadow, 1) != null) {
             // Pass along `@include box-shadow(none);`
             $result: $shadow;
         } @else {
             // Filter to avoid invalid properties for example `box-shadow: none, 1px 1px black;`
-            @for $i from 1 through length($shadow) {
-                @if nth($shadow, $i) != "none" and nth($shadow, $i) != null {
-                    $result: append($result, nth($shadow, $i), "comma");
+            @for $i from 1 through list.length($shadow) {
+                @if list.nth($shadow, $i) != "none" and list.nth($shadow, $i) != null {
+                    $result: list.append($result, list.nth($shadow, $i), "comma");
                 }
             }
         }
 
-        @if (length($result) > 0) {
+        @if (list.length($result) > 0) {
             box-shadow: $result;
         }
     }
