--- a/scss/mixins/_modal.scss
+++ b/scss/mixins/_modal.scss
@@ -1,3 +1,7 @@
+@use "../settings";
+@use "../settings-options";
+@use "border";
+
 // Modal
 
 // Allow modal to fill viewport
@@ -9,7 +13,7 @@
     overflow-y: auto; // Scroll here to not overlap the side of `.modal-content`
 
     @at-root .modal.fade #{&} {
-        transform: $modal-transform-fullscreen;
+        transform: settings.$modal-transform-fullscreen;
     }
 
     // Fix content height in legacy Edge
@@ -22,16 +26,16 @@
         height: min-content;
         min-height: 100vh;
         border: 0;
-        @include border-radius(0);
+        @include border.border-radius(0);
     }
 
-    @if $enable-modal-scrollable {
+    @if settings-options.$enable-modal-scrollable {
         &.modal-dialog-scrollable {
             overflow-y: hidden;
         }
     }
 
-    @if $enable-modal-centered {
+    @if settings-options.$enable-modal-centered {
         &.modal-dialog-centered {
             align-items: stretch;
         }
