--- a/scss/mixins/_pagination.scss
+++ b/scss/mixins/_pagination.scss
@@ -1,3 +1,7 @@
+@use "../settings";
+@use "border";
+@use "font-size";
+
 // Pagination
 @mixin pagination-size($padding-y, $padding-x, $font-size, $line-height, $border-radius) {
     .page-text,
@@ -5,14 +9,14 @@
         @if $padding-y == null and $padding-x == null {
             // No padding output
         } @else if $padding-y == null or $padding-x == null {
-            $padding-y: if($padding-y != null, $padding-y, $pagination-padding-y);
-            $padding-x: if($padding-x != null, $padding-x, $pagination-padding-x);
+            $padding-y: if($padding-y != null, $padding-y, settings.$pagination-padding-y);
+            $padding-x: if($padding-x != null, $padding-x, settings.$pagination-padding-x);
             padding: $padding-y $padding-x;
         } @else {
             padding: $padding-y $padding-x;
         }
-        @include font-size($font-size);
+        @include font-size.font-size($font-size);
         line-height: $line-height;
-        @include border-radius($border-radius);
+        @include border.border-radius($border-radius);
     }
 }
