--- a/scss/mixins/_text-emphasis.scss
+++ b/scss/mixins/_text-emphasis.scss
@@ -1,3 +1,6 @@
+@use "../functions/color-util";
+@use "hover";
+
 // stylelint-disable declaration-no-important
 
 // Contextual text
@@ -7,8 +10,8 @@
     }
     @if $level-delta != 0 {
         a#{$parent} {
-            @include hover-focus() {
-                color: palette($color, 500 + $level-delta) !important;
+            @include hover.hover-focus() {
+                color: color-util.palette($color, 500 + $level-delta) !important;
             }
         }
     }
@@ -17,12 +20,12 @@
 // Palette text
 @mixin text-emphasis-palette-variant($parent, $color, $level, $level-delta) {
     #{$parent} {
-        color: palette($color, $level) !important;
+        color: color-util.palette($color, $level) !important;
     }
     @if $level-delta != 0 {
         a#{$parent} {
-            @include hover-focus() {
-                color: palette($color, $level + $level-delta) !important;
+            @include hover.hover-focus() {
+                color: color-util.palette($color, $level + $level-delta) !important;
             }
         }
     }
