--- a/scss/utilities/_clearfix.scss
+++ b/scss/utilities/_clearfix.scss
@@ -1,5 +1,8 @@
-@if $enable-utility-clearfix {
+@use "../mixins/clearfix";
+@use "../settings-options";
+
+@if settings-options.$enable-utility-clearfix {
     .clearfix {
-        @include clearfix();
+        @include clearfix.clearfix();
     }
 }
