--- a/scss/utilities/_float.scss
+++ b/scss/utilities/_float.scss
@@ -1,16 +1,21 @@
-@if $enable-utility-float {
-    @each $breakpoint in $utility-float-breakpoints {
-        $bprule: breakpoint-designator($breakpoint);
+@use "../mixins/breakpoints";
+@use "../mixins/float";
+@use "../settings";
+@use "../settings-options";
 
-        @include media-breakpoint-up($breakpoint) {
+@if settings-options.$enable-utility-float {
+    @each $breakpoint in settings.$utility-float-breakpoints {
+        $bprule: breakpoints.breakpoint-designator($breakpoint);
+
+        @include breakpoints.media-breakpoint-up($breakpoint) {
             .float#{$bprule}-start {
-                @include float-start();
+                @include float.float-start();
             }
             .float#{$bprule}-end {
-                @include float-end();
+                @include float.float-end();
             }
             .float#{$bprule}-none {
-                @include float-none();
+                @include float.float-none();
             }
         }
     }
