--- a/scss/utilities/_overflow.scss
+++ b/scss/utilities/_overflow.scss
@@ -1,8 +1,11 @@
+@use "../settings";
+@use "../settings-options";
+
 // stylelint-disable declaration-no-important
 
 // Overflow utilties
-@if $enable-utility-overflow {
-    @each $value in $utility-overflow {
+@if settings-options.$enable-utility-overflow {
+    @each $value in settings.$utility-overflow {
         .overflow-#{$value} { overflow: $value !important; }
     }
 }
