--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -1,14 +1,18 @@
+@use "../mixins/breakpoints";
+@use "../settings";
+@use "../settings-options";
+
 // stylelint-disable declaration-no-important
 
-@if $enable-utility-spacing {
+@if settings-options.$enable-utility-spacing {
     // Margin and Padding
-    @each $breakpoint in $utility-spacing-breakpoints {
-        $bprule: breakpoint-designator($breakpoint);
+    @each $breakpoint in settings.$utility-spacing-breakpoints {
+        $bprule: breakpoints.breakpoint-designator($breakpoint);
 
-        @include media-breakpoint-up($breakpoint) {
+        @include breakpoints.media-breakpoint-up($breakpoint) {
             @each $prop, $abbrev in (margin: m, padding: p) {
-                @if ($abbrev == m and $enable-utility-spacing-margin) or ($abbrev == p and $enable-utility-spacing-padding) {
-                    $spacers-map: if($abbrev == m, $spacers-margin, $spacers-padding);
+                @if ($abbrev == m and settings-options.$enable-utility-spacing-margin) or ($abbrev == p and settings-options.$enable-utility-spacing-padding) {
+                    $spacers-map: if($abbrev == m, settings.$spacers-margin, settings.$spacers-padding);
                     @each $size, $length in $spacers-map {
                         .#{$abbrev}#{$bprule}-#{$size} {
                             #{$prop}: $length !important;
@@ -38,30 +42,30 @@
             // Negative (or inverse) margins - negative padding does not exist
             // These variants get a 'n' prepended to the size so
             // `.mb-n1` is the negative variant of `.mb-1`
-            @if $enable-utility-spacing-margin-negative {
-                @each $size, $length in $spacers-margin-negative {
+            @if settings-options.$enable-utility-spacing-margin-negative {
+                @each $size, $length in settings.$spacers-margin-negative {
                     @if not($length == 0) {
-                        .m#{$bprule}-#{$spacers-margin-negative-prepend}#{$size} {
+                        .m#{$bprule}-#{settings.$spacers-margin-negative-prepend}#{$size} {
                             margin: ($length * -1) !important;
                         }
                     }
                 }
-                @each $size, $length in $spacers-margin-negative {
+                @each $size, $length in settings.$spacers-margin-negative {
                     @if not($length == 0) {
-                        .mt#{$bprule}-#{$spacers-margin-negative-prepend}#{$size},
-                        .my#{$bprule}-#{$spacers-margin-negative-prepend}#{$size} {
+                        .mt#{$bprule}-#{settings.$spacers-margin-negative-prepend}#{$size},
+                        .my#{$bprule}-#{settings.$spacers-margin-negative-prepend}#{$size} {
                             margin-top: ($length * -1) !important;
                         }
-                        .me#{$bprule}-#{$spacers-margin-negative-prepend}#{$size},
-                        .mx#{$bprule}-#{$spacers-margin-negative-prepend}#{$size} {
+                        .me#{$bprule}-#{settings.$spacers-margin-negative-prepend}#{$size},
+                        .mx#{$bprule}-#{settings.$spacers-margin-negative-prepend}#{$size} {
                             margin-right: ($length * -1) !important;
                         }
-                        .mb#{$bprule}-#{$spacers-margin-negative-prepend}#{$size},
-                        .my#{$bprule}-#{$spacers-margin-negative-prepend}#{$size} {
+                        .mb#{$bprule}-#{settings.$spacers-margin-negative-prepend}#{$size},
+                        .my#{$bprule}-#{settings.$spacers-margin-negative-prepend}#{$size} {
                             margin-bottom: ($length * -1) !important;
                         }
-                        .ms#{$bprule}-#{$spacers-margin-negative-prepend}#{$size},
-                        .mx#{$bprule}-#{$spacers-margin-negative-prepend}#{$size} {
+                        .ms#{$bprule}-#{settings.$spacers-margin-negative-prepend}#{$size},
+                        .mx#{$bprule}-#{settings.$spacers-margin-negative-prepend}#{$size} {
                             margin-left: ($length * -1) !important;
                         }
                     }
@@ -69,7 +73,7 @@
             }
 
             // Auto margin
-            @if $enable-utility-spacing-margin-auto {
+            @if settings-options.$enable-utility-spacing-margin-auto {
                 .m#{$bprule}-auto {
                     margin: auto !important;
                 }
@@ -91,8 +95,8 @@
                 }
             }
 
-            @if $enable-utility-spacing-gap {
-                @each $size, $length in $spacers-gap {
+            @if settings-options.$enable-utility-spacing-gap {
+                @each $size, $length in settings.$spacers-gap {
                     .gap#{$bprule}-#{$size} {
                         gap: $length !important;
                     }
